# plugin-template

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  plugin.cpp
.github/workflows/: build.yml  release.yml
include/whatsmy/: plugin_api.h
